# RAGqs

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  start.ps1  vector-database.yml  待实现功能.md
app/: __init__.py  config.py  main.py
docs/: deployment.md  evaluation.md  example.md  extension-guide.md  operations.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
mermaid-diagrams/: Agent显式图与工具分支.md  Provider模型与Embedding装配.md  RAG检索Pipeline.md  会话历史与检索审计.md  功能覆盖索引.md  工具注册与内置工具.md  应用启动与健康检查.md  文档上传与索引任务.md  文档切分与向量写入细节.md  权限与知识空间访问.md  流式对话与SSE.md  用户发起对话.md  评估测试与运维门禁.md
scripts/: check-api-health.ps1  run-evaluation.ps1  run-fake-load.ps1  run-integration-smoke.ps1  run-postgres-smoke.ps1  validate-baseline.ps1
static/: app.js  index.html  styles.css
tests/: chat-history.test.js  start-script.validation.ps1  test_admin_department_routes.py  test_admin_user_routes.py  test_admin_user_service.py  test_agent_provider_injection.py  test_api_models.py  test_auth_backward_compat.py  test_auth_routes.py  test_authz_foundation.py  test_background_indexing_worker.py  test_chat_provider_selection.py  test_chat_retrieval_trace.py  test_config_groups.py  test_deepseek_chat_provider.py  test_department_service.py  test_department_store.py  test_evaluation_foundation.py  test_file_upload_ingestion.py  test_indexing_queue.py  test_ingestion_foundation.py  test_knowledge_catalog.py  test_knowledge_space_routes.py  test_knowledge_spaces_lifecycle.py  test_knowledge_tool_provider.py  test_local_auth_service.py  test_password.py  test_phase0_baseline.py  test_phase7_operations.py  test_phase8_foundation_templates.py  test_postgres_smoke.py  (+24 more)
(+203 files in other folders)
